[package]
name = "serde-valuable"
version = "0.7.0"
authors = ["arcnmx"]
edition = "2018"

description = "Serialization value trees"
documentation = "https://docs.rs/serde-valuable/*/serde_value/"
repository = "https://github.com/arcnmx/serde-valuable"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = "1"
ordered-float = "5"

[dev-dependencies]
serde_derive = "1"
