[package]
name = "serde-valuable"
version = "0.7.0"
authors = ["arcnmx"]
edition = "2018"

description = "Serialization value trees"
documentation = "https://docs.rs/serde-valuable/*/serde_value/"
repository = "https://github.com/arcnmx/serde-valuable"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["alloc"], default-features = false }
ordered-float = { version = "5", default-features = false, features = [
    "serde",
] }

[dev-dependencies]
serde_derive = "1"
