[package]
name = "serde-valuable"
version = "0.8.0"
authors = [
    "arcnmx",
    "Chris L. Barnes <chrislloydbarnes@gmail.com>",
]
edition = "2024"

description = "Value enum for serde data model (fork of serde-value)"
repository = "https://github.com/clbarnes/serde-valuable"
readme = "README.md"
keywords = ["serde", "serde-value"]
license = "MIT"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["alloc"], default-features = false }
ordered-float = { version = "5", default-features = false, features = [
    "serde",
] }

[dev-dependencies]
serde_derive = "1"
